unpackaged/main/default/objects/SFDC_Purchase_Items__c/SFDC_Purchase_Items__c.object-meta.xml
<CustomObject>
    <description>A catalog of your regularly purchased items.</description>
    <label>Purchase Item</label>
    <nameField>
        <label>Purchase Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>