unpackaged/main/default/objects/SFDC_Purchase_Items__c/fields/item_Code__c.field-meta.xml
<CustomField>
    <fullName>item_Code__c</fullName>
    <label>Purchase Item Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>