unpackaged/main/default/objects/SFDC_Purchase_Items__c/fields/Preferred_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preferred Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N30000001NaBAEA0</relationshipName>
    <type>Lookup</type>
</CustomField>