unpackaged/main/default/objects/SFDC_Purchase_Items__c/fields/Standard_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Standard_Unit_of_Measure__c</fullName>
    <label>Standard Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Each</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Carton</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>