unpackaged/main/default/objects/SFDC_Purchase_Items__c/fields/Vendor_SKU__c.field-meta.xml
<CustomField>
    <fullName>Vendor_SKU__c</fullName>
    <label>Vendor SKU</label>
    <length>60</length>
    <type>Text</type>
</CustomField>