unpackaged/main/default/objects/SFDC_Purchase_Items__c/listViews/AllPurchaseItems.listView-meta.xml
<ListView>
    <fullName>AllPurchaseItems</fullName>
    <columns>NAME</columns>
    <columns>Preferred_Vendor__c</columns>
    <columns>Standard_Cost__c</columns>
    <columns>Vendor_SKU__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Purchase Items</label>
</ListView>